--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -1,4 +1,14 @@
-*italics* and sandeep Panchamukhi 
+---
+title:  'This is the title: it contains a colon'
+author:
+- Author Sandeep
+
+tags: [R]
+abstract: |
+  This is the abstract.
+
+---
+
 # About the project
 
 *Write a short description about the course and add a link to your github repository here. This is an R markdown (.Rmd) file so you can use R markdown syntax. See the 'Useful links' page in the mooc area (chapter 1) for instructions.*
