--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -6,5 +6,7 @@ author:
 ---
 
 # About the project
-
-*Write a short description about the course and add a link to your github repository here. This is an R markdown (.Rmd) file so you can use R markdown syntax. See the 'Useful links' page in the mooc area (chapter 1) for instructions.*
+In the first week of the open data science course, I have learnt the following things.
+     * github
+     * Introduction to R
+     * earned data camp certificate 
