--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -11,5 +11,6 @@ In the first week of the open data science course, I have learnt the following t
 *  github
 *  Introduction to R
 *  earned data camp certificate
-
 ---
+## My github repository https://github.com/sandeep37/IODS-project
+
