--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -12,5 +12,7 @@ In the first week of the open data science course, I have learnt the following t
 *  Introduction to R
 *  earned data camp certificate
 ---
-## My github repository https://github.com/sandeep37/IODS-project
+
+## My github repository 
+https://github.com/sandeep37/IODS-project
 
