--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -17,3 +17,5 @@ In the first week of the open data science course, I have learnt the following t
 ## My github repository 
 https://github.com/sandeep37/IODS-project
 
+## My learning diary 
+https://sandeep37.github.io/IODS-project
